# docs/swagger.yaml
@@ -555,6 +555,25 @@ definitions:
       username:
         type: string
     type: object
+  api.UpdateUserSelfRequest:
+    properties:
+      avatar_url:
+        type: string
+      date_of_birth:
+        type: string
+      first_name:
+        type: string
+      gender:
+        type: string
+      last_name:
+        type: string
+      locale:
+        type: string
+      phone_number:
+        type: string
+      username:
+        type: string
+    type: object
   api.ValidatePromoRequest:
     properties:
       code:
@@ -2007,7 +2026,7 @@ paths:
     patch:
       consumes:
       - application/json
-      description: Update user information
+      description: Update profile fields of the authenticated user
       parameters:
       - description: Bearer token
         in: header
@@ -2024,7 +2043,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/api.UpdateUserRequest'
+          $ref: '#/definitions/api.UpdateUserSelfRequest'
       produces:
       - application/json
       responses:
@@ -2036,6 +2055,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/httpresp.HTTPError'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/httpresp.HTTPError'
         "404":
           description: Not Found
           schema:
@@ -2044,7 +2067,39 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/httpresp.HTTPError'
-      summary: Update a user
+      summary: Update a user (self)
+      tags:
+      - users
+  /users/{id}/admin:
+    patch:
+      consumes:
+      - application/json
+      description: Admin-only update that may flip privileged fields
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Privileged user update data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/api.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/interfaces.User'
+      summary: Update a user (admin)
       tags:
       - users
   /users/admins:
